implemented authorization with Bearer JWT
