# datalake_api/swagger_server/models/config_body.py
@@ -1,0 +1,62 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class ConfigBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, new_config: str=None):  # noqa: E501
+        """ConfigBody - a model defined in Swagger
+
+        :param new_config: The new_config of this ConfigBody.  # noqa: E501
+        :type new_config: str
+        """
+        self.swagger_types = {
+            'new_config': str
+        }
+
+        self.attribute_map = {
+            'new_config': 'new_config'
+        }
+        self._new_config = new_config
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ConfigBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The config_body of this ConfigBody.  # noqa: E501
+        :rtype: ConfigBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def new_config(self) -> str:
+        """Gets the new_config of this ConfigBody.
+
+
+        :return: The new_config of this ConfigBody.
+        :rtype: str
+        """
+        return self._new_config
+
+    @new_config.setter
+    def new_config(self, new_config: str):
+        """Sets the new_config of this ConfigBody.
+
+
+        :param new_config: The new_config of this ConfigBody.
+        :type new_config: str
+        """
+
+        self._new_config = new_config
